k8s/broker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: broker
  name: broker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: broker
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/network: "true"
        io.kompose.service: broker
    spec:
      containers:
        - image: rabbitmq:3.8.18-management-alpine
          name: celery-broker
          ports:
            - containerPort: 15672
            - containerPort: 5672
          resources: {}
      restartPolicy: Always
status: {}
