k8s/network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network
spec:
  ingress:
    - from: []
  podSelector:
    matchLabels:
      io.kompose.network/network: "true"
